Lenguaje-TagaPlate/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> COMMENT outsideInstruction PPROC instructionBlock SEMMICOLOM outsideInstruction
Rule 2     outsideInstruction -> attribute SEMMICOLOM outsideInstruction
Rule 3     outsideInstruction -> function SEMMICOLOM outsideInstruction
Rule 4     outsideInstruction -> empty
Rule 5     instructionBlock -> LPAR insideInstruction RPAR
Rule 6     attribute -> NEW ID COMMA LPAR datatype COMMA value RPAR
Rule 7     attribute -> NEW ID COMMA LPAR datatype COMMA alterFunction RPAR
Rule 8     attribute -> NEW ID COMMA LPAR datatype COMMA returnBoolFunction RPAR
Rule 9     attribute -> NEW ID COMMA LPAR datatype COMMA ID RPAR
Rule 10    function -> PROC ID instructionBlock
Rule 11    function -> innerFunction
Rule 12    insideInstruction -> attribute SEMMICOLOM insideInstruction
Rule 13    insideInstruction -> innerFunction SEMMICOLOM insideInstruction
Rule 14    insideInstruction -> empty
Rule 15    datatype -> NUMDT
Rule 16    datatype -> BOOLDT
Rule 17    value -> NUMVALUE
Rule 18    value -> BOOLVALUE
Rule 19    innerFunction -> languageFunction
Rule 20    innerFunction -> tagadaFunction
Rule 21    languageFunction -> alterFunction
Rule 22    languageFunction -> returnBoolFunction
Rule 23    languageFunction -> voidFunction
Rule 24    tagadaFunction -> MOVERIGHT
Rule 25    tagadaFunction -> MOVELEFT
Rule 26    tagadaFunction -> STOP
Rule 27    tagadaFunction -> hammerFunction
Rule 28    alterFunction -> ALTER LPAR ID COMMA numericalOperator COMMA NUMVALUE RPAR
Rule 29    alterFunction -> ALTER LPAR ID COMMA numericalOperator COMMA ID RPAR
Rule 30    returnBoolFunction -> alterbFunction
Rule 31    returnBoolFunction -> istrueFunction
Rule 32    returnBoolFunction -> numericalConditionFunction
Rule 33    voidFunction -> callFunction
Rule 34    voidFunction -> valuesFunction
Rule 35    voidFunction -> iterativeFunction
Rule 36    voidFunction -> printFunction
Rule 37    hammerFunction -> HAMMER LPAR direction RPAR
Rule 38    numericalOperator -> ADDOP
Rule 39    numericalOperator -> SUBOP
Rule 40    numericalOperator -> MULOP
Rule 41    numericalOperator -> DIVOP
Rule 42    alterbFunction -> ALTERB LPAR ID RPAR
Rule 43    istrueFunction -> ISTRUE LPAR BOOLVALUE RPAR
Rule 44    istrueFunction -> ISTRUE LPAR returnBoolFunction RPAR
Rule 45    istrueFunction -> ISTRUE LPAR ID RPAR
Rule 46    numericalConditionFunction -> NUMVALUE logicOperator NUMVALUE
Rule 47    numericalConditionFunction -> NUMVALUE logicOperator alterFunction
Rule 48    numericalConditionFunction -> NUMVALUE logicOperator ID
Rule 49    numericalConditionFunction -> alterFunction logicOperator NUMVALUE
Rule 50    numericalConditionFunction -> alterFunction logicOperator alterFunction
Rule 51    numericalConditionFunction -> alterFunction logicOperator ID
Rule 52    numericalConditionFunction -> ID logicOperator NUMVALUE
Rule 53    numericalConditionFunction -> ID logicOperator alterFunction
Rule 54    numericalConditionFunction -> ID logicOperator ID
Rule 55    callFunction -> CALL LPAR ID RPAR
Rule 56    valuesFunction -> VALUES LPAR ID COMMA value RPAR
Rule 57    valuesFunction -> VALUES LPAR ID COMMA alterFunction RPAR
Rule 58    valuesFunction -> VALUES LPAR ID COMMA returnBoolFunction RPAR
Rule 59    valuesFunction -> VALUES LPAR ID COMMA ID RPAR
Rule 60    iterativeFunction -> repeatFunction
Rule 61    iterativeFunction -> untilFunction
Rule 62    iterativeFunction -> whileFunction
Rule 63    iterativeFunction -> casewhenFunction
Rule 64    iterativeFunction -> caseFunction
Rule 65    printFunction -> PRINTVALUES LPAR ID consolePrint RPAR
Rule 66    printFunction -> PRINTVALUES LPAR TEXT consolePrint RPAR
Rule 67    direction -> NORTH
Rule 68    direction -> SOUTH
Rule 69    direction -> EAST
Rule 70    direction -> WEST
Rule 71    logicOperator -> EEOP
Rule 72    logicOperator -> NEOP
Rule 73    logicOperator -> GETOP
Rule 74    logicOperator -> LETOP
Rule 75    logicOperator -> GTOP
Rule 76    logicOperator -> LTOP
Rule 77    repeatFunction -> REPEAT LPAR insideInstruction BREAK SEMMICOLOM insideInstruction RPAR
Rule 78    untilFunction -> UNTIL instructionBlock BOOLVALUE
Rule 79    untilFunction -> UNTIL instructionBlock returnBoolFunction
Rule 80    untilFunction -> UNTIL instructionBlock ID
Rule 81    whileFunction -> WHILE BOOLVALUE instructionBlock
Rule 82    whileFunction -> WHILE returnBoolFunction instructionBlock
Rule 83    whileFunction -> WHILE ID instructionBlock
Rule 84    casewhenFunction -> CASEWHEN LPAR BOOLVALUE RPAR THEN instructionBlock elseExpression
Rule 85    casewhenFunction -> CASEWHEN LPAR returnBoolFunction RPAR THEN instructionBlock elseExpression
Rule 86    casewhenFunction -> CASEWHEN LPAR ID RPAR THEN instructionBlock elseExpression
Rule 87    caseFunction -> CASE ID WHEN value THEN instructionBlock whenExpression elseExpression
Rule 88    consolePrint -> COMMA ID consolePrint
Rule 89    consolePrint -> COMMA TEXT consolePrint
Rule 90    consolePrint -> empty
Rule 91    elseExpression -> ELSE instructionBlock
Rule 92    elseExpression -> empty
Rule 93    whenExpression -> WHEN value THEN instructionBlock whenExpression
Rule 94    whenExpression -> empty
Rule 95    empty -> <empty>

Terminals, with rules where they appear

ADDOP                : 38
ALTER                : 28 29
ALTERB               : 42
BOOLDT               : 16
BOOLVALUE            : 18 43 78 81 84
BREAK                : 77
CALL                 : 55
CASE                 : 87
CASEWHEN             : 84 85 86
COMMA                : 6 6 7 7 8 8 9 9 28 28 29 29 56 57 58 59 88 89
COMMENT              : 1
DIVOP                : 41
EAST                 : 69
EEOP                 : 71
ELSE                 : 91
GETOP                : 73
GTOP                 : 75
HAMMER               : 37
ID                   : 6 7 8 9 9 10 28 29 29 42 45 48 51 52 53 54 54 55 56 57 58 59 59 65 80 83 86 87 88
ISTRUE               : 43 44 45
LETOP                : 74
LPAR                 : 5 6 7 8 9 28 29 37 42 43 44 45 55 56 57 58 59 65 66 77 84 85 86
LTOP                 : 76
MOVELEFT             : 25
MOVERIGHT            : 24
MULOP                : 40
NEOP                 : 72
NEW                  : 6 7 8 9
NORTH                : 67
NUMDT                : 15
NUMVALUE             : 17 28 46 46 47 48 49 52
PPROC                : 1
PRINTVALUES          : 65 66
PROC                 : 10
REPEAT               : 77
RPAR                 : 5 6 7 8 9 28 29 37 42 43 44 45 55 56 57 58 59 65 66 77 84 85 86
SEMMICOLOM           : 1 2 3 12 13 77
SOUTH                : 68
STOP                 : 26
SUBOP                : 39
TEXT                 : 66 89
THEN                 : 84 85 86 87 93
UNTIL                : 78 79 80
VALUES               : 56 57 58 59
WEST                 : 70
WHEN                 : 87 93
WHILE                : 81 82 83
error                : 

Nonterminals, with rules where they appear

alterFunction        : 7 21 47 49 50 50 51 53 57
alterbFunction       : 30
attribute            : 2 12
callFunction         : 33
caseFunction         : 64
casewhenFunction     : 63
consolePrint         : 65 66 88 89
datatype             : 6 7 8 9
direction            : 37
elseExpression       : 84 85 86 87
empty                : 4 14 90 92 94
function             : 3
hammerFunction       : 27
innerFunction        : 11 13
insideInstruction    : 5 12 13 77 77
instructionBlock     : 1 10 78 79 80 81 82 83 84 85 86 87 91 93
istrueFunction       : 31
iterativeFunction    : 35
languageFunction     : 19
logicOperator        : 46 47 48 49 50 51 52 53 54
numericalConditionFunction : 32
numericalOperator    : 28 29
outsideInstruction   : 1 1 2 3
printFunction        : 36
program              : 0
repeatFunction       : 60
returnBoolFunction   : 8 22 44 58 79 82 85
tagadaFunction       : 20
untilFunction        : 61
value                : 6 56 87 93
valuesFunction       : 34
voidFunction         : 23
whenExpression       : 87 93
whileFunction        : 62

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . COMMENT outsideInstruction PPROC instructionBlock SEMMICOLOM outsideInstruction

    COMMENT         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> COMMENT . outsideInstruction PPROC instructionBlock SEMMICOLOM outsideInstruction
    (2) outsideInstruction -> . attribute SEMMICOLOM outsideInstruction
    (3) outsideInstruction -> . function SEMMICOLOM outsideInstruction
    (4) outsideInstruction -> . empty
    (6) attribute -> . NEW ID COMMA LPAR datatype COMMA value RPAR
    (7) attribute -> . NEW ID COMMA LPAR datatype COMMA alterFunction RPAR
    (8) attribute -> . NEW ID COMMA LPAR datatype COMMA returnBoolFunction RPAR
    (9) attribute -> . NEW ID COMMA LPAR datatype COMMA ID RPAR
    (10) function -> . PROC ID instructionBlock
    (11) function -> . innerFunction
    (95) empty -> .
    (19) innerFunction -> . languageFunction
    (20) innerFunction -> . tagadaFunction
    (21) languageFunction -> . alterFunction
    (22) languageFunction -> . returnBoolFunction
    (23) languageFunction -> . voidFunction
    (24) tagadaFunction -> . MOVERIGHT
    (25) tagadaFunction -> . MOVELEFT
    (26) tagadaFunction -> . STOP
    (27) tagadaFunction -> . hammerFunction
    (28) alterFunction -> . ALTER LPAR ID COMMA numericalOperator COMMA NUMVALUE RPAR
    (29) alterFunction -> . ALTER LPAR ID COMMA numericalOperator COMMA ID RPAR
    (30) returnBoolFunction -> . alterbFunction
    (31) returnBoolFunction -> . istrueFunction
    (32) returnBoolFunction -> . numericalConditionFunction
    (33) voidFunction -> . callFunction
    (34) voidFunction -> . valuesFunction
    (35) voidFunction -> . iterativeFunction
    (36) voidFunction -> . printFunction
    (37) hammerFunction -> . HAMMER LPAR direction RPAR
    (42) alterbFunction -> . ALTERB LPAR ID RPAR
    (43) istrueFunction -> . ISTRUE LPAR BOOLVALUE RPAR
    (44) istrueFunction -> . ISTRUE LPAR returnBoolFunction RPAR
    (45) istrueFunction -> . ISTRUE LPAR ID RPAR
    (46) numericalConditionFunction -> . NUMVALUE logicOperator NUMVALUE
    (47) numericalConditionFunction -> . NUMVALUE logicOperator alterFunction
    (48) numericalConditionFunction -> . NUMVALUE logicOperator ID
    (49) numericalConditionFunction -> . alterFunction logicOperator NUMVALUE
    (50) numericalConditionFunction -> . alterFunction logicOperator alterFunction
    (51) numericalConditionFunction -> . alterFunction logicOperator ID
    (52) numericalConditionFunction -> . ID logicOperator NUMVALUE
    (53) numericalConditionFunction -> . ID logicOperator alterFunction
    (54) numericalConditionFunction -> . ID logicOperator ID
    (55) callFunction -> . CALL LPAR ID RPAR
    (56) valuesFunction -> . VALUES LPAR ID COMMA value RPAR
    (57) valuesFunction -> . VALUES LPAR ID COMMA alterFunction RPAR
    (58) valuesFunction -> . VALUES LPAR ID COMMA returnBoolFunction RPAR
    (59) valuesFunction -> . VALUES LPAR ID COMMA ID RPAR
    (60) iterativeFunction -> . repeatFunction
    (61) iterativeFunction -> . untilFunction
    (62) iterativeFunction -> . whileFunction
    (63) iterativeFunction -> . casewhenFunction
    (64) iterativeFunction -> . caseFunction
    (65) printFunction -> . PRINTVALUES LPAR ID consolePrint RPAR
    (66) printFunction -> . PRINTVALUES LPAR TEXT consolePrint RPAR
    (77) repeatFunction -> . REPEAT LPAR insideInstruction BREAK SEMMICOLOM insideInstruction RPAR
    (78) untilFunction -> . UNTIL instructionBlock BOOLVALUE
    (79) untilFunction -> . UNTIL instructionBlock returnBoolFunction
    (80) untilFunction -> . UNTIL instructionBlock ID
    (81) whileFunction -> . WHILE BOOLVALUE instructionBlock
    (82) whileFunction -> . WHILE returnBoolFunction instructionBlock
    (83) whileFunction -> . WHILE ID instructionBlock
    (84) casewhenFunction -> . CASEWHEN LPAR BOOLVALUE RPAR THEN instructionBlock elseExpression
    (85) casewhenFunction -> . CASEWHEN LPAR returnBoolFunction RPAR THEN instructionBlock elseExpression
    (86) casewhenFunction -> . CASEWHEN LPAR ID RPAR THEN instructionBlock elseExpression
    (87) caseFunction -> . CASE ID WHEN value THEN instructionBlock whenExpression elseExpression

    NEW             shift and go to state 7
    PROC            shift and go to state 11
    PPROC           reduce using rule 95 (empty -> .)
    MOVERIGHT       shift and go to state 16
    MOVELEFT        shift and go to state 17
    STOP            shift and go to state 18
    ALTER           shift and go to state 20
    HAMMER          shift and go to state 29
    ALTERB          shift and go to state 30
    ISTRUE          shift and go to state 31
    NUMVALUE        shift and go to state 21
    ID              shift and go to state 8
    CALL            shift and go to state 32
    VALUES          shift and go to state 33
    PRINTVALUES     shift and go to state 39
    REPEAT          shift and go to state 40
    UNTIL           shift and go to state 41
    WHILE           shift and go to state 42
    CASEWHEN        shift and go to state 43
    CASE            shift and go to state 44

    outsideInstruction             shift and go to state 3
    attribute                      shift and go to state 4
    function                       shift and go to state 5
    empty                          shift and go to state 6
    alterFunction                  shift and go to state 9
    returnBoolFunction             shift and go to state 10
    innerFunction                  shift and go to state 12
    languageFunction               shift and go to state 13
    tagadaFunction                 shift and go to state 14
    voidFunction                   shift and go to state 15
    hammerFunction                 shift and go to state 19
    alterbFunction                 shift and go to state 22
    istrueFunction                 shift and go to state 23
    numericalConditionFunction     shift and go to state 24
    callFunction                   shift and go to state 25
    valuesFunction                 shift and go to state 26
    iterativeFunction              shift and go to state 27
    printFunction                  shift and go to state 28
    repeatFunction                 shift and go to state 34
    untilFunction                  shift and go to state 35
    whileFunction                  shift and go to state 36
    casewhenFunction               shift and go to state 37
    caseFunction                   shift and go to state 38

state 3

    (1) program -> COMMENT outsideInstruction . PPROC instructionBlock SEMMICOLOM outsideInstruction

    PPROC           shift and go to state 45


state 4

    (2) outsideInstruction -> attribute . SEMMICOLOM outsideInstruction

    SEMMICOLOM      shift and go to state 46


state 5

    (3) outsideInstruction -> function . SEMMICOLOM outsideInstruction

    SEMMICOLOM      shift and go to state 47


state 6

    (4) outsideInstruction -> empty .

    PPROC           reduce using rule 4 (outsideInstruction -> empty .)
    $end            reduce using rule 4 (outsideInstruction -> empty .)


state 7

    (6) attribute -> NEW . ID COMMA LPAR datatype COMMA value RPAR
    (7) attribute -> NEW . ID COMMA LPAR datatype COMMA alterFunction RPAR
    (8) attribute -> NEW . ID COMMA LPAR datatype COMMA returnBoolFunction RPAR
    (9) attribute -> NEW . ID COMMA LPAR datatype COMMA ID RPAR

    ID              shift and go to state 48


state 8

    (52) numericalConditionFunction -> ID . logicOperator NUMVALUE
    (53) numericalConditionFunction -> ID . logicOperator alterFunction
    (54) numericalConditionFunction -> ID . logicOperator ID
    (71) logicOperator -> . EEOP
    (72) logicOperator -> . NEOP
    (73) logicOperator -> . GETOP
    (74) logicOperator -> . LETOP
    (75) logicOperator -> . GTOP
    (76) logicOperator -> . LTOP

    EEOP            shift and go to state 50
    NEOP            shift and go to state 51
    GETOP           shift and go to state 52
    LETOP           shift and go to state 53
    GTOP            shift and go to state 54
    LTOP            shift and go to state 55

    logicOperator                  shift and go to state 49

state 9

    (21) languageFunction -> alterFunction .
    (49) numericalConditionFunction -> alterFunction . logicOperator NUMVALUE
    (50) numericalConditionFunction -> alterFunction . logicOperator alterFunction
    (51) numericalConditionFunction -> alterFunction . logicOperator ID
    (71) logicOperator -> . EEOP
    (72) logicOperator -> . NEOP
    (73) logicOperator -> . GETOP
    (74) logicOperator -> . LETOP
    (75) logicOperator -> . GTOP
    (76) logicOperator -> . LTOP

    SEMMICOLOM      reduce using rule 21 (languageFunction -> alterFunction .)
    EEOP            shift and go to state 50
    NEOP            shift and go to state 51
    GETOP           shift and go to state 52
    LETOP           shift and go to state 53
    GTOP            shift and go to state 54
    LTOP            shift and go to state 55

    logicOperator                  shift and go to state 56

state 10

    (22) languageFunction -> returnBoolFunction .

    SEMMICOLOM      reduce using rule 22 (languageFunction -> returnBoolFunction .)


state 11

    (10) function -> PROC . ID instructionBlock

    ID              shift and go to state 57


state 12

    (11) function -> innerFunction .

    SEMMICOLOM      reduce using rule 11 (function -> innerFunction .)


state 13

    (19) innerFunction -> languageFunction .

    SEMMICOLOM      reduce using rule 19 (innerFunction -> languageFunction .)


state 14

    (20) innerFunction -> tagadaFunction .

    SEMMICOLOM      reduce using rule 20 (innerFunction -> tagadaFunction .)


state 15

    (23) languageFunction -> voidFunction .

    SEMMICOLOM      reduce using rule 23 (languageFunction -> voidFunction .)


state 16

    (24) tagadaFunction -> MOVERIGHT .

    SEMMICOLOM      reduce using rule 24 (tagadaFunction -> MOVERIGHT .)


state 17

    (25) tagadaFunction -> MOVELEFT .

    SEMMICOLOM      reduce using rule 25 (tagadaFunction -> MOVELEFT .)


state 18

    (26) tagadaFunction -> STOP .

    SEMMICOLOM      reduce using rule 26 (tagadaFunction -> STOP .)


state 19

    (27) tagadaFunction -> hammerFunction .

    SEMMICOLOM      reduce using rule 27 (tagadaFunction -> hammerFunction .)


state 20

    (28) alterFunction -> ALTER . LPAR ID COMMA numericalOperator COMMA NUMVALUE RPAR
    (29) alterFunction -> ALTER . LPAR ID COMMA numericalOperator COMMA ID RPAR

    LPAR            shift and go to state 58


state 21

    (46) numericalConditionFunction -> NUMVALUE . logicOperator NUMVALUE
    (47) numericalConditionFunction -> NUMVALUE . logicOperator alterFunction
    (48) numericalConditionFunction -> NUMVALUE . logicOperator ID
    (71) logicOperator -> . EEOP
    (72) logicOperator -> . NEOP
    (73) logicOperator -> . GETOP
    (74) logicOperator -> . LETOP
    (75) logicOperator -> . GTOP
    (76) logicOperator -> . LTOP

    EEOP            shift and go to state 50
    NEOP            shift and go to state 51
    GETOP           shift and go to state 52
    LETOP           shift and go to state 53
    GTOP            shift and go to state 54
    LTOP            shift and go to state 55

    logicOperator                  shift and go to state 59

state 22

    (30) returnBoolFunction -> alterbFunction .

    SEMMICOLOM      reduce using rule 30 (returnBoolFunction -> alterbFunction .)
    LPAR            reduce using rule 30 (returnBoolFunction -> alterbFunction .)
    RPAR            reduce using rule 30 (returnBoolFunction -> alterbFunction .)


state 23

    (31) returnBoolFunction -> istrueFunction .

    SEMMICOLOM      reduce using rule 31 (returnBoolFunction -> istrueFunction .)
    LPAR            reduce using rule 31 (returnBoolFunction -> istrueFunction .)
    RPAR            reduce using rule 31 (returnBoolFunction -> istrueFunction .)


state 24

    (32) returnBoolFunction -> numericalConditionFunction .

    SEMMICOLOM      reduce using rule 32 (returnBoolFunction -> numericalConditionFunction .)
    LPAR            reduce using rule 32 (returnBoolFunction -> numericalConditionFunction .)
    RPAR            reduce using rule 32 (returnBoolFunction -> numericalConditionFunction .)


state 25

    (33) voidFunction -> callFunction .

    SEMMICOLOM      reduce using rule 33 (voidFunction -> callFunction .)


state 26

    (34) voidFunction -> valuesFunction .

    SEMMICOLOM      reduce using rule 34 (voidFunction -> valuesFunction .)


state 27

    (35) voidFunction -> iterativeFunction .

    SEMMICOLOM      reduce using rule 35 (voidFunction -> iterativeFunction .)


state 28

    (36) voidFunction -> printFunction .

    SEMMICOLOM      reduce using rule 36 (voidFunction -> printFunction .)


state 29

    (37) hammerFunction -> HAMMER . LPAR direction RPAR

    LPAR            shift and go to state 60


state 30

    (42) alterbFunction -> ALTERB . LPAR ID RPAR
